--- a/Login in.html
+++ b/Login in.html
@@ -41,8 +41,8 @@
         }
         .loginin{
             position: fixed;
-            top: 100px;
-            left: 50px;
+            top: 25%;
+            left: 10%;
 	        padding:10px 40px; 
 	        background:#ffffff;
 	        width:700px;
