--- a/Sign up.html
+++ b/Sign up.html
@@ -30,11 +30,11 @@
         }
         .signup{
             position: fixed;
-            top: 100px;
-            left: 50px;
+            top: 25%;
+            left: 10%;
 	        padding:10px 40px; 
 	        background:#ffffff;
-	        width:700px;
+	        width:45%;
 	        border-radius:25px;
             box-shadow: -10px -10px 5px #ffffff;
         }
