--- a/Login in.html
+++ b/Login in.html
@@ -4,52 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        .sup{
-            display: inline-block;
-            position: fixed;
-            left: 500px;
-            margin-right:50px;
-            margin-left:50px;
-        }
-        .loi{
-            display: inline-block;
-            position: fixed;
-            left: 400px;
-            margin-right:50px;
-            margin-left:50px;
-        }
-        a {
-
-            text-decoration:none;
-        }
-        img{
-            width: 40%;
-            height: 40%;
-            float: left;
-        }
-        .bg{
-            position:fixed;
-            top: 0;
-            left: 0;
-            width:100%;
-            height:100%;
-            z-index:-10;
-            background: url(img/bg.jpeg);
-            background-size: cover;
-            background-position: center 0;            
-        }
-        .loginin{
-            position: fixed;
-            top: 25%;
-            left: 10%;
-	        padding:10px 40px; 
-	        background:#ffffff;
-	        width:700px;
-	        border-radius:25px;
-            box-shadow: -10px -10px 5px #ffffff;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="css/login.css">
     <title>Welcom to BBX</title>
 </head>
 <body>
@@ -58,7 +13,7 @@
     <div><img src="img/logo.png" /></div>
         <a class="loi" href="Login in.html" >登录</a>
         <a class="sup" href="Sign up.html" >注册</a><br>
-        <hr width="50%"/>
+        <hr/>
     </div>
 </body>
 </html>   
