--- a/index.html
+++ b/index.html
@@ -1,69 +1,49 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh-CN" xmlns="">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/sign.css">
-    <script src="js/city.js" type="text/javascript" charset="utf-8"></script>
+    <link rel="stylesheet" type="text/css" href="css/login.css">
+    <script src="js/method.js" type="text/javascript" charset="utf-8"></script>
     <title>Welcome to BBX</title>
 </head>
-<body onload='getProvince()'>
-<div class="bg">
-    <div class="signup">
-        <div class="logo"><img class="logo" src="img/logo.png"  alt="404.php"/></div>
-        <a class="loi" href="Login in.html" >登录</a>
-        <a class="sup" href="Sign up.html" >注册</a><br>
-        <hr/>
-        <div class="table">
-            <table>
-                <form onsubmit="checked()">
-                    <tr>
-                        <td><label for="uc">账号</label></td><td><input type="text" id="un" name="userAccount" placeholder="请输入用户名" id="uc"></td>
-                    </tr>
-                    <tr>
-                        <td><label for="psw">密码</label></td><td><input id="psw" type="password" name="Userpassword" placeholder="最长20个字符" maxlength="20"></td>
-                    </tr>
-                    <tr>
-                        <td><label for="cpsw">确认密码</label></td> <td><input type="password" name="Confirmpassword" id="cpsw"></td>
-                    </tr>
-                    <tr>
-                        <td>性别</td><td><input type="radio" name="sex" value="男" id="sex"> <label for="sex">男</label> <input type="radio" name="sex" value="女" id="sex2"> <label for="sex2">女</label>  <input type="radio" name="sex" value="保密" id="sex3" checked> <label for="sex3">保密</label></td>
-                    </tr>
-                    <!-- 所在地选择 -->
-                    <tr>
-                        <td>所在地</td>
-                        <td>
-                            <select id="province" onchange="chooseProvince(this)">
-                                <option value="1">请选择省</option>
-                            </select>
-                            <select id="city" onchange="chooseCity(this)">
-                                <option value="2">请选择市</option>
-                            </select>
-                            <select id="area">
-                                <option value="3">请选择区</option>
-                            </select>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>兴趣爱好</td>
-                        <td><input type="checkbox" name="hobby" value="学习" id="hobby1"> <label for="hobby1">学习</label> <input type="checkbox" name="hobby" value="运动" id="hobby2"> <label for="hobby2">运动</label> <input type="checkbox" name="hobby" value="旅游" id="hobby3"> <label for="hobby3">旅游</label> <input type="checkbox" name="hobby" value="摄影" id="hobby4"> <label for="hobby4">摄影</label></td>
-                    </tr>
-                    <tr>
-                        <td>上传头像:</td> <td><input type="file"name="UserAvatar"></td>
-                    </tr>
-                    <tr>
-                        <td><label for="ph">手机号码</label></td> <td><input type="text" name="PhoneNumber" id="ph"></td>
-                    </tr>
-                    <tr>
-                        <td><label for="vc">验证码</label></td>
-                        <td><input type="text" name="VerifiCode" style="width:60px;height:auto;" id="vc"> <input type="button" name="GetVerific" value="获取验证码"></td>
-                    </tr>
-                    <tr>
-                        <td> <span><input class="btn" type="submit" value="注		册"/></span> </td>
-                    </tr>
-                </form>
-            </table>
+<body>
+<div class="bg"></div>
+<div class="logins">
+    <div class="logo"><img class="logo" src="img/logo.png" alt="404"/></div>
+    <a class="loi" href="Login in.html" >登录</a>
+    <a class="sup" href="Sign up.html" >注册</a><br>
+    <hr/><br>
+    <img class="avr" src="img/avr.jpg" alt="404"/><br><br><br><br>
+    <div class="table">
+        <table>
+            <form name="login">
+                <tr>
+                    <td><label for="uc">账号</label></td><td><input type="text" name="userAccount" placeholder="请输入用户名" id="uc"></td>
+                </tr>
+                <tr>
+                    <td><label for="psw">密码</label></td><td><input id="psw" type="password" name="Userpassword" placeholder="最长20个字符" maxlength="20"></td>
+                </tr>
+                <tr>
+                    <td><input type="checkbox" name="isSavePsw" id="rpsw" checked><label for="rpsw">记住密码</label></td><td>
+                    <input type="checkbox" name="isAutoLogin" id="alg"><label for="alg">自动登录</label>
+                    <a href="#" >忘记密码?</a></td>
+                </tr>
+                <tr>
+                    <td> <div class="logbtn"> <span><input class="btn" onclick="window.LoginChecked()" type="submit" value="登		录"/></span></div></td>
+                </tr>
+            </form>
+        </table>
+        <div class="ThirdLogin">
+            <br><br><br>第三方登录<br>
+            <hr class="hr"/>
+            <a href="#">
+                <img  class="ThirdLogin" src="img/wb.jpg" alt="404"></a>
+            <a href="#">
+                <img  class="ThirdLogin" src="img/wx.jpg" alt="404"></a>
+            <a href="#">
+                <img  class="ThirdLogin" src="img/qq.jpg" alt="404"></a>
         </div>
     </div>
 </div>
