--- a/Sign up.html
+++ b/Sign up.html
@@ -23,10 +23,10 @@
                     <td><label for="uc">账号</label></td><td><input type="text" name="userAccount" placeholder="请输入用户名" id="uc"></td>
                 </tr>
                 <tr>
-                    <td><label for="psw">密码</label></td><td><input id="psw" type="password" name="Userpassword" placeholder="最长20个字符" maxlength="20"></td>
+                    <td><label for="psw">密码</label></td><td><input id="psw" type="password" name="UserPassword" placeholder="最长20个字符" maxlength="20"></td>
                 </tr>
                 <tr>
-                    <td><label for="cpsw">确认密码</label></td> <td><input type="password" name="Confirmpassword" id="cpsw"></td>
+                    <td><label for="cpsw">确认密码</label></td> <td><input type="password" name="ConfirmPassword" id="cpsw"></td>
                 </tr>
                 <tr>
                     <td>性别</td><td><input type="radio" name="sex" value="男" id="sex"> <label for="sex">男</label> <input type="radio" name="sex" value="女" id="sex2"> <label for="sex2">女</label>  <input type="radio" name="sex" value="保密" id="sex3" checked> <label for="sex3">保密</label></td>
@@ -58,7 +58,7 @@
                 </tr>
                 <tr>
                     <td><label for="vc">验证码</label></td>
-                    <td><input type="text" name="VerifiCode" style="width:60px;height:auto;" id="vc"><button type="button" >获取验证码</button>
+                    <td><input type="text" name="VerificationCode" style="width:60px;height:auto;" id="vc"><button type="button" >获取验证码</button>
                 </tr>
                 <tr>
                     <td> <span><input class="btn" onclick="window.SignChecked()" type="submit" value="注		册"/></span> </td>
