--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <td><label for="uc">账号</label></td><td><input type="text" name="userAccount" placeholder="请输入用户名" id="uc"></td>
                 </tr>
                 <tr>
-                    <td><label for="psw">密码</label></td><td><input id="psw" type="password" name="Userpassword" placeholder="最长20个字符" maxlength="20"></td>
+                    <td><label for="psw">密码</label></td><td><input id="psw" type="password" name="UserPassword" placeholder="最长20个字符" maxlength="20"></td>
                 </tr>
                 <tr>
                     <td><input type="checkbox" name="isSavePsw" id="rpsw" checked><label for="rpsw">记住密码</label></td><td>
