--- a/index.html
+++ b/index.html
@@ -1,51 +1,107 @@
 <!DOCTYPE html>
-<html lang="zh-CN" xmlns="">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/login.css">
-    <script src="js/method.js" type="text/javascript" charset="utf-8"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
     <title>Welcome to BBX</title>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/city.js"></script>
+    <script src="js/method.js"></script>
 </head>
-<body>
+<body onload="getProvince()" >
 <div class="bg"></div>
-<div class="logins">
-    <div class="logo"><img class="logo" src="img/logo.png" alt="404"/></div>
-    <a class="loi" href="Login in.html" >登录</a>
-    <a class="sup" href="Sign up.html" >注册</a><br>
-    <hr/><br>
-    <img class="avr" src="img/avr.jpg" alt="404"/><br><br><br><br>
-    <div class="table">
-        <table>
-            <form name="login">
+<div class="board">
+    <div class="logo"></div>
+    <div class="switch">
+<ul> <!--注册和登录表单切换-->
+            <li class="swlg" id='loginsw' onmouseover='onMouseOver()' onclick="changePage('login')">
+                <p id="lg" style="color: #649cf0" >登录</p></li>
+            <li class="swsg" id='signsw' onmouseover='onMouseOver()' onclick="changePage('register')">
+                <p id="sg">注册</p></li>
+        </ul>
+    </div>
+    <!--    登录表单-->
+    <div class="avr" id="avr"></div>
+    <div class="login_div" id='login' >
+        <form name="login_form" method="post" action="javascript:void(0)" >
+            账号&nbsp <input type="text" name="userName"><br>
+            密码&nbsp <input type="password" name="userPassword"><br>
+            <input type="checkbox" name="isRememberPSW" id="isrmpsw" checked><label for="isrmpsw"><font
+                style="font-size: 14px">记住密码</font></label>
+            <a href="#" class="forgetPsw"><font style="font-size: 14px">忘记密码?</font></a><br><br>
+            <input type="submit" class="login_btn" name="login" value="   登          录   " onclick="window.LoginChecked()"><br><br><br>
+            <font style="font-size: 14px">第三方登录</font>
+            <div class="thirdLogin">
+                <a href="https://im.qq.com/pcqq"><img src="img/qq.jpg" class="thirdLogin" alt="404"></a>
+                <a href="https://wx.qq.com"><img src="img/wx.jpg" class="thirdLogin" alt="404"></a>
+                <a href="https://m.weibo.cn"><img src="img/wb.jpg" class="thirdLogin" alt="404"></a>
+            </div>
+        </form>
+    </div>
+    <!--    注册表单-->
+    <div class="register_div" id='register' style="display: none">
+        <form name="register_form" method="post" action="javascript:void(0)" >
+            <table>
                 <tr>
-                    <td><label for="uc">账号</label></td><td><input type="text" name="userAccount" placeholder="请输入用户名" id="uc"></td>
+                    <td class="name">账号</td>
+                    <td><input class="sign" type="text" name="userName"><br></td>
                 </tr>
                 <tr>
-                    <td><label for="psw">密码</label></td><td><input id="psw" type="password" name="UserPassword" placeholder="最长20个字符" maxlength="20"></td>
+                    <td class="name">密码</td>
+                    <td><input class="sign" type="password" name="userPassword"><br></td>
                 </tr>
                 <tr>
-                    <td><input type="checkbox" name="isSavePsw" id="rpsw" checked><label for="rpsw">记住密码</label></td><td>
-                    <input type="checkbox" name="isAutoLogin" id="alg"><label for="alg">自动登录</label>
-                    <a href="#" >忘记密码?</a></td>
+                    <td class="name">确认密码</td>
+                    <td><input class="sign" type="password" name="ConfirmPassword"></td>
                 </tr>
                 <tr>
-                    <td> <div class="logbtn"> <span><input class="btn" onclick="window.LoginChecked()" type="submit" value="登		录"/></span></div></td>
+                    <td class="option">性别</td>
+                    <td>
+                        <input type="radio" name="sex" value="男" id="sex"> <label for="sex">男</label>
+                        <input type="radio" name="sex" value="女" id="sex2"> <label for="sex2">女</label>
+                        <input type="radio" name="sex" value="保密" id="sex3" checked> <label
+                            for="sex3">保密</label>
+                    </td>
                 </tr>
-            </form>
-        </table>
-        <div class="ThirdLogin">
-            <br><br><br>第三方登录<br>
-            <hr class="hr"/>
-            <a href="#">
-                <img  class="ThirdLogin" src="img/wb.jpg" alt="404"></a>
-            <a href="#">
-                <img  class="ThirdLogin" src="img/wx.jpg" alt="404"></a>
-            <a href="#">
-                <img  class="ThirdLogin" src="img/qq.jpg" alt="404"></a>
-        </div>
+                <tr>
+                    <td class="option">所在地</td>
+                    <td>
+                        <select id="province" onchange="chooseProvince(this)">
+                            <option value="1">请选择省</option>
+                        </select>
+                        <select id="city" onchange="chooseCity(this)">
+                            <option value="2">请选择市</option>
+                        </select>
+                        <select id="area">
+                            <option value="3">请选择区</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="option">兴趣爱好</td>
+                    <td>
+                        <input type="checkbox" name="hobby" value="学习" id="hobby1"> <label for="hobby1">学习</label>
+                        <input type="checkbox" name="hobby" value="运动" id="hobby2"> <label for="hobby2">运动</label>
+                        <input type="checkbox" name="hobby" value="旅游" id="hobby3"> <label for="hobby3">旅游</label>
+                        <input type="checkbox" name="hobby" value="摄影" id="hobby4"> <label for="hobby4">摄影</label>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="option">上传头像</td>
+                    <td><input type="file" name="UserAvatar"></td>
+                </tr>
+                <tr>
+                    <td class="option"><label for="vc">验证码</label></td>
+                    <td><input class="sign" type="text" name="VerificationCode" id="vc" placeholder="请输入手机获取的验证码"></td>
+                </tr>
+            </table>
+                <input type="submit" class="sign_btn"  name="register" value="   注             册   " onclick="window.SignChecked()">
+        </form>
     </div>
 </div>
 </body>
-</html>   
+<script src="js/jquery.min.js"></script>
+<script src="js/city.js"></script>
+<script src="js/method.js"></script>
+</html>
